ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/Iterators/parserForOfStatement6/input.ts.stderr
error: Expected one variable binding
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/Iterators/parserForOfStatement6/input.ts:2:17
  |
2 | for (var a = 1, b = 2 of X) {
  |                 ^

